# ecs_asio_server

./: .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_REVIEW.md  Dockerfile  PROTOCOL_STRUCTURE.md  README.md  TESTING.md  build_debug.sh  docker-compose.dev.yml  docker-compose.prod.yml  game_client.cpp  run_tests.sh  simple_client.cpp  test_ecs_system.cpp  test_map_manager_only.cpp
.github/workflows/: build.yml
client/: game_bot.cpp  game_bot.hpp  main.cpp  simple_client.cpp
common/: log.hpp  timing.hpp
common/core/: compiler_defs.hpp  cpu_info.hpp  packet_buffer.cpp  packet_buffer.hpp
common/network/: close_function.hpp  connection_interface.hpp  frame_codec.hpp  socket_buffer.cpp  socket_channel_base.cpp  socket_channel_base.hpp
common/protocol/: protocol_all.hpp  protocol_base.hpp  protocol_chat.hpp  protocol_combat.hpp  protocol_map.hpp  protocol_player.hpp
config/: server_config.json
core/: config_manager.cpp  config_manager.hpp  data_option.hpp  net_error.hpp  net_state.hpp  platform_util.hpp  spin_lock.hpp  thread_group.cpp
docker/mysql/: init.sql
docs/: ARCHITECTURE.md  CODING_STYLE.md  IMPROVEMENT_ROADMAP.md  STYLE_MIGRATION.md
game/: entity.cpp  entity.hpp  entity_manager.hpp  game_server.cpp  game_server.hpp  game_service.cpp  main.cpp  memory_pool.hpp  player.cpp  player.hpp  system.cpp
game/components/: health.hpp  transform.hpp
game/systems/: ai_system.cpp  combat_system.cpp  combat_system.hpp  map_system.cpp  map_system.hpp  movement_system.hpp  threaded_map_system.hpp
game/threading/: main_thread_manager.cpp  map_thread.cpp  map_thread.hpp  map_thread_manager.cpp
network/: asio_channel.cpp  asio_channel.hpp  asio_server.cpp  asio_server.hpp  connection_interface.hpp  frame_codec.hpp  message_dispatcher.hpp  message_ids.hpp  net_handler.hpp  socket_buffer.hpp  socket_channel_base.cpp  socket_channel_base.hpp  socket_option.hpp  socket_platform.hpp  socket_plugin_base.hpp
server/: main.cpp
server/core/: server_config.cpp  server_config.hpp  thread_group.hpp
server/db/: db_connection.cpp  db_connection.hpp  db_manager.cpp  db_manager.hpp  failure_sink.cpp  failure_sink.hpp  redis_client.cpp  redis_client.hpp  transaction.hpp
server/db/dao/: player_dao.cpp  player_dao.hpp
server/game/: component.cpp  component.hpp  game_server.cpp  game_server.hpp  game_service.cpp
server/game/components/: game_object.hpp  health.hpp  map.hpp  transform.hpp
server/game/ecs/: game_service.cpp  game_service.hpp  system.hpp
server/game/handlers/: guild_handlers.cpp  player_handlers.cpp
server/game/systems/: ai_system.cpp  ai_system.hpp  combat_system.cpp  combat_system.hpp  map_system.cpp  map_system.hpp  movement_system.cpp  movement_system.hpp  threaded_map_system.hpp
server/game/threading/: main_thread_manager.cpp  main_thread_manager.hpp  map_thread.cpp  map_thread.hpp  map_thread_manager.hpp
server/network/: asio_channel.cpp  asio_channel.hpp  asio_server.cpp  asio_server.hpp
shared/: protocol_base.hpp  protocol_combat.hpp  protocol_guild.hpp  protocol_map.hpp
tests/: advanced_threading_test.cpp  benchmark_performance.cpp  debug_test.cpp  integration_test.cpp  simple_threading_test.cpp  test_ecs_system.cpp  test_manager_system.cpp  test_network_stability.cpp  test_packet_buffer.cpp  test_threading_system.cpp  test_world_system.cpp
